# investor

./: .ast-grep-rule.yaml  .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DATA_STRUCTURE.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  MIXSEEK_IMPLEMENTATION_CHECKLIST.md  MIXSEEK_TEST_QUICKSTART.md  README.md  README_MIXSEEK_IMPLEMENTATION.md  Taskfile.yml  agr.toml  main.py  pyproject.toml  pyrightconfig.json  walkthrough.md
.agent/workflows/: daily.md  frontend-update.md  git.md  newalphasearch.md  qwen-inference.md
.claude/: CLAUDE.md  ralph-loop.local.md  skills
.claude/agents/: alpha-quality-optimizer-agent.md  cqo-agent.md  (+12 more)
.serena/: project.yml
config/: default.yaml
docs/: OPERATIONS.md  refined_ideas.md
edinet2dataset/: .gitignore  README.md  pyproject.toml  run_all.sh
edinet2dataset/data/E02144/: README.md
edinet2dataset/edinet_corpus/annual/: README.md
edinet2dataset/edinet_corpus/annual/E00028/: S100TO7R.json
edinet2dataset/edinet_corpus/annual/E00114/: S100TRI4.json
edinet2dataset/edinet_corpus/annual/E00253/: S100TQFS.json
edinet2dataset/edinet_corpus/annual/E00279/: S100TLYX.json
edinet2dataset/edinet_corpus/annual/E00341/: S100TR2D.json
edinet2dataset/edinet_corpus/annual/E00584/: S100TOP3.json
edinet2dataset/edinet_corpus/annual/E00598/: S100TQUV.json
edinet2dataset/edinet_corpus/annual/E00837/: S100TQZD.json
edinet2dataset/edinet_corpus/annual/E01118/: S100TQIY.json
edinet2dataset/edinet_corpus/annual/E01235/: S100TK3X.json
edinet2dataset/edinet_corpus/annual/E01331/: S100TRNM.json
edinet2dataset/edinet_corpus/annual/E01369/: S100TNPN.json
edinet2dataset/edinet_corpus/annual/E01414/: S100TRCL.json
edinet2dataset/edinet_corpus/annual/E01509/: S100TQPG.json
edinet2dataset/edinet_corpus/annual/E01606/: S100TPEW.json
edinet2dataset/edinet_corpus/annual/E01683/: S100TNNV.json
edinet2dataset/edinet_corpus/annual/E01772/: S100TQZC.json
edinet2dataset/edinet_corpus/annual/E01803/: S100TNPC.json
edinet2dataset/edinet_corpus/annual/E01805/: S100TRU1.json
edinet2dataset/edinet_corpus/annual/E01821/: S100TQJL.json
edinet2dataset/edinet_corpus/annual/E02043/: S100TQTH.json
edinet2dataset/edinet_corpus/annual/E02048/: S100TRKY.json
edinet2dataset/edinet_corpus/annual/E02173/: S100TQDA.json
edinet2dataset/edinet_corpus/annual/E02244/: S100TRWN.json
edinet2dataset/edinet_corpus/annual/E02252/: S100TNHH.json
edinet2dataset/edinet_corpus/annual/E02388/: S100TQN4.json
edinet2dataset/edinet_corpus/annual/E02558/: S100TR5U.json
edinet2dataset/edinet_corpus/annual/E02571/: S100TRLN.json
edinet2dataset/edinet_corpus/annual/E02632/: S100TRUJ.json
edinet2dataset/edinet_corpus/annual/E02714/: S100TQMI.json
edinet2dataset/edinet_corpus/annual/E02765/: S100TQWU.json
edinet2dataset/edinet_corpus/annual/E02824/: S100TQPU.json
edinet2dataset/edinet_corpus/annual/E02838/: S100TQR2.json
edinet2dataset/edinet_corpus/annual/E02977/: S100TRUC.json
edinet2dataset/edinet_corpus/annual/E03127/: S100TOVH.json
edinet2dataset/edinet_corpus/annual/E03670/: S100TRBH.json
edinet2dataset/edinet_corpus/annual/E03802/: S100TQYQ.json
edinet2dataset/edinet_corpus/annual/E03838/: S100TPAG.json
edinet2dataset/edinet_corpus/annual/E04164/: S100TNQA.json
edinet2dataset/edinet_corpus/annual/E04353/: S100TRIK.json
edinet2dataset/edinet_corpus/annual/E04411/: S100TPUA.json
edinet2dataset/edinet_corpus/annual/E04478/: S100TRDQ.json
edinet2dataset/edinet_corpus/annual/E04521/: S100TS1C.json
edinet2dataset/edinet_corpus/annual/E04607/: S100TPRL.json
edinet2dataset/edinet_corpus/annual/E04639/: S100TS0B.json
edinet2dataset/edinet_corpus/annual/E04719/: S100TQMB.json
edinet2dataset/edinet_corpus/annual/E04858/: S100TPJA.json
edinet2dataset/edinet_corpus/annual/E05028/: S100TRHM.json
edinet2dataset/edinet_corpus/annual/E05048/: S100TQZG.json
edinet2dataset/edinet_corpus/annual/E05272/: S100TQOY.json
edinet2dataset/edinet_corpus/annual/E05438/: S100TQ74.json
edinet2dataset/edinet_corpus/annual/E05487/: S100TPTU.json
edinet2dataset/edinet_corpus/annual/E05518/: S100TQOZ.json
edinet2dataset/edinet_corpus/annual/E05651/: S100TOOV.json
edinet2dataset/edinet_corpus/annual/E05736/: S100TPY8.json
edinet2dataset/edinet_corpus/annual/E06141/: S100TQJ1.json
edinet2dataset/edinet_corpus/annual/E11661/: S100TQT5.json
edinet2dataset/edinet_corpus/annual/E39184/: S100TPOV.json
edinet2dataset/scripts/: prepare_edinet_corpus.py
edinet2dataset/scripts/earnings_forecast/: README.md
edinet2dataset/scripts/fraud_detection/: README.md  prepare_dataset.py  prepare_fraud.py  prepare_nonfraud.py
edinet2dataset/scripts/industry_prediction/: README.md  prepare_dataset.py
edinet2dataset/src/edinet2dataset/: README.md  downloader.py
llm/qwen3.5-9b/: README.md  ace_qwen_transformers.py  ace_qwen_verify.py  cuda_setup.sh  path_utils.py  pyproject.toml  vllm_test.py
logs/: alpha_performance.csv  memory.sqlite  mission.md
scripts/: migrate_data_to_d_drive.sh  quality-check.sh  self_healing_lint.sh
ts-agent/: .biomeignore  .env.example  CLAUDE.md  MIXSEEK_INTEGRATION_TEST_SUMMARY.md  README.md  alpha_discovery_mission.md  biome.json  debug_estat.ts  diagnose_jquants.ts  find_segments.ts  lint_output.txt  package-lock.json  package.json  pyproject.toml  quantum_playback.ts  test_engine.json  test_estat.ts  test_indexer.ts  test_schema.ts  test_schema_v2.ts  test_search.ts  tmp_check.ts  tsconfig.json
ts-agent/src/experiments/foundation_models/: constants.json  pyproject.toml
ts-agent/src/model_registry/: README.md  constants.json  factors.json  model_registry_loader.ts  models.json  pyproject.toml  registry.ts  run_inference.py
(+727 files in other folders)
