[project]
name = "finance-investor-workspace"
version = "0.1.0"
description = "Root workspace for finance investor projects"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "python-dotenv",
    "tqdm",
    "requests",
    "polars",
    "loguru",
    "anthropic",
    "backoff",
    "pdfminer.six",
    "pandas",
    "pyqlib",
    "pydantic",
    "pyyaml",
    "pyright",
    "ruff",
    "pillow",
    "protobuf<5.0.0",
    "setuptools>=80.10.2",
]

[project.optional-dependencies]
ml = [
    "autoawq",
    "huggingface-hub[cli]",
    "transformers",
    "accelerate",
    "compressed-tensors",
    "vllm",
    "torch",
    "torchvision",
]
verification = [
    "matplotlib",
    "numpy",
]
inference = [
    "torch",
    "numpy",
    "pandas",
    "transformers",
    "chronos-forecasting",
    "huggingface-hub",
    "accelerate",
    "timesfm"
]
dev = [
    "datasets",
    "japanize-matplotlib",
    "matplotlib-fontja",
    "matplotlib",
    "pytest",
    "ruff",
    "scikit-learn",
]


[tool.uv]
managed = true

[tool.uv.workspace]
members = ["ts-agent"]
