[project]
name = "finance-investor"
version = "0.1.0"
description = "Consolidated finance investor workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "backoff",
    "browser-use",
    "ghat>=0.1.3",
    "langchain-openai>=1.1.10",
    "loguru",
    "matplotlib",
    "numpy",
    "pandas",
    "pdfminer.six",
    "pillow",
    "playwright",
    "polars",
    "protobuf<5.0.0",
    "pydantic",
    "pyqlib",
    "pyright",
    "python-dotenv",
    "pyyaml",
    "requests",
    "ruff",
    "setuptools>=80.10.2",
    "tqdm",
]

[project.optional-dependencies]
ml = [
    "accelerate",
    "autoawq",
    "compressed-tensors",
    "huggingface-hub[cli]",
    "torch",
    "torchvision",
    "transformers",
    "vllm",
]
inference = [
    "accelerate",
    "chronos-forecasting",
    "huggingface-hub",
    "timesfm",
    "torch",
    "transformers",
]
dev = [
    "datasets",
    "japanize-matplotlib",
    "matplotlib-fontja",
    "pytest",
    "scikit-learn",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"] # Line too long (handled by line-length/formatter)

[tool.pyright]
include = ["ts-agent/src", "llm"]
exclude = ["**/node_modules", "**/__pycache__", ".venv"]
typeCheckingMode = "basic"
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportMissingImports = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
