[project]
name = "edinet2dataset"
version = "0.1.0"
description = "Edinet document downloader and parser"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/edinet2dataset"]
