[project]
name = "qwen3-5-9b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "autoawq>=0.2.9",
    "huggingface-hub[cli]>=0.26.0",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "accelerate>=1.3.0",
    "compressed-tensors>=0.9.0",
    "vllm>=0.7.0",
    "torch>=2.4.0",
    "torchvision",
    "pillow",
]
