[project]
name = "investor-inference-engine"
version = "0.1.0"
description = "Advanced Time-Series Foundation Models for Alpha Generation"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "transformers>=4.30.0",
    "chronos-forecasting",
    "huggingface-hub",
    "accelerate",
    "timesfm"
]

[tool.uv]
dev-dependencies = [
    "pytest",
]
